--- a/fastspider/templates/spiders/air_spider.tmpl
+++ b/fastspider/templates/spiders/air_spider.tmpl
@@ -1,6 +1,6 @@
 # encoding=utf-8
 
-class ${spider_class_name}(fastspider.AirSpider):
+class {{spider_class_name}}(fastspider.AirSpider):
 
 	def start_requests(self):
 	    yield fastspider.Request("http://www.baidu.com")
@@ -10,4 +10,4 @@ class ${spider_class_name}(fastspider.AirSpider):
 
 
 if __name__ == "__main__":
-    ${spider_class_name}().start()
+    {{spider_class_name}}().start()
