--- a/fastspider/templates/spiders/air_spider.tmpl
+++ b/fastspider/templates/spiders/air_spider.tmpl
@@ -1,11 +1,14 @@
 # encoding=utf-8
 
+import fastspider
+
+
 class {{spider_class_name}}(fastspider.AirSpider):
 
 	def start_requests(self):
 	    yield fastspider.Request("http://www.baidu.com")
 
-	def parse(self):
+	def parse(self, response):
 	    print(response.text)
 
 
