修改轻量级爬虫类名

--- a/fastspider/templates/spiders/light_spider.tmpl
+++ b/fastspider/templates/spiders/light_spider.tmpl
@@ -3,7 +3,7 @@
 import fastspider
 
 
-class {{spider_class_name}}(fastspider.AirSpider):
+class {{spider_class_name}}(fastspider.LightSpider):
 
 	def start_requests(self):
 	    yield fastspider.Request("http://www.baidu.com")
